// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Custom Class 1`] = `
<button
  className="btn-prm-md btn-dis"
>
  fake disabled
</button>
`;

exports[`Storyshots Components/Button Default 1`] = `
<button
  className="btn-prm-md "
/>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="btn-prm-dis-md "
>
  disabled
</button>
`;

exports[`Storyshots Components/Button Large 1`] = `
<button
  className="btn-prm-lg "
>
  Large Button !!!
</button>
`;

exports[`Storyshots Components/Button Medium 1`] = `
<button
  className="btn-prm-md "
>
  Medium Btn
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="btn-prm-md "
>
  Primary
</button>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
<button
  className="btn-sec-md "
>
  Secondary
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  className="btn-prm-sm "
>
  Small
</button>
`;

exports[`Storyshots Components/Button Square 1`] = `
<button
  className="btn-prm-sq "
>
  OK
</button>
`;

exports[`Storyshots Components/Card Default 1`] = `
<div
  className="card-md"
  style={
    Object {
      "width": "200px",
    }
  }
>
  <svg
    className="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    className="card-divider"
  />
  <div
    className="card-container"
  >
    <h3>
      Title
    </h3>
    <div
      className="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;
